[gd_scene load_steps=12 format=2]

[ext_resource path="res://UI/Start2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Map/Map.gd" type="Script" id=2]
[ext_resource path="res://Music/MapTheme.tscn" type="PackedScene" id=3]
[ext_resource path="res://Map/MapNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/GotoMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/Submit.tres" type="Theme" id=6]
[ext_resource path="res://Map/ButtonContainer.gd" type="Script" id=7]
[ext_resource path="res://pics/States/tutoria.png" type="Texture" id=8]
[ext_resource path="res://UI/Dialog/SallyDialog.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/Other/FlashingArrow.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/Other/FlashingArrow.gd" type="Script" id=11]

[node name="TutorialMap" type="Node2D"]
script = ExtResource( 2 )

[node name="Container" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Container"]
position = Vector2( 575, -112 )
z_index = -1
texture = ExtResource( 8 )

[node name="lvl1" parent="Container" instance=ExtResource( 4 )]
visible = false
position = Vector2( 0, 1 )

[node name="lvl2" parent="Container" instance=ExtResource( 4 )]
visible = false
position = Vector2( 337, -103 )
folder = "lvl2"

[node name="lvl3" parent="Container" instance=ExtResource( 4 )]
visible = false
position = Vector2( 918, -89 )
folder = "lvl3"

[node name="FlashingArrow" parent="Container" instance=ExtResource( 10 )]
visible = false
position = Vector2( 0, -2 )
script = ExtResource( 11 )

[node name="MapTheme" parent="." instance=ExtResource( 3 )]

[node name="ButtonContainer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="HBox" type="HBoxContainer" parent="ButtonContainer"]
margin_right = 1033.0
margin_bottom = 175.0
mouse_filter = 2
alignment = 2

[node name="Fill1" type="ColorRect" parent="ButtonContainer/HBox"]
margin_bottom = 175.0
color = Color( 1, 1, 1, 0 )

[node name="Start2" parent="ButtonContainer/HBox" instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0 )
margin_left = 4.0
margin_right = 238.0
margin_bottom = 175.0
theme = ExtResource( 6 )

[node name="Fill2" type="ColorRect" parent="ButtonContainer/HBox"]
margin_left = 242.0
margin_right = 692.0
margin_bottom = 175.0
rect_min_size = Vector2( 450, 0 )
color = Color( 1, 1, 1, 0 )

[node name="GotoMenu" parent="ButtonContainer/HBox" instance=ExtResource( 5 )]
margin_left = 696.0
margin_right = 1037.0
margin_bottom = 175.0

[node name="Dialog" type="CanvasLayer" parent="."]

[node name="SallyDialog" parent="Dialog" instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_right = 0.0
margin_top = -1070.0
margin_bottom = -1070.0
